--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "quantum-circuit": "^0.9.32",
     "socket.io": "^2.1.1"
   }
