--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "html": "^1.0.0",
+    "path": "^0.12.7",
     "quantum-circuit": "^0.9.32",
     "socket.io": "^2.1.1"
   }
